--- a/views/event.erb
+++ b/views/event.erb
@@ -7,13 +7,13 @@
       
       <article class="intro">
           <header class="section">
-          <h1><%= @event.title %></h1>
+          <h1><%= @event.name %></h1>
           </header>
           <figure id="main">
             <img src="/images/event/syria-crisis_320.jpg" width="320" height="186" alt="" data-fullsrc="syria-crisis_640" />
             <figcaption>Bombing in a Syrian city</a></figcaption>
           </figure>
-          <p><%= @event.description %></p>
+          <p>Event description</p>
 
           <a href="#">
               <span class="cta">
